[package]
name = "waaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
chrono = "0.4.31"
dotenvy = "0.15.7"
log = "0.4.20"
pishock_rs = "2.1.1"
serenity = "0.12.0"
simplelog = "0.12.1"
tokio = "1.35.1"
