[package]
name = "waaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fern = "0.6.2"
log = "0.4.20"
pishock_rs = "2.1.1"
regex = "1.10.2"
ron = "0.8.1"
serde = "1.0.193"
serenity = "0.12.0"
thiserror = "1.0.56"
tokio = "1.35.1"
